--- a/MinimalApi/Components/Pages/Todo.razor
+++ b/MinimalApi/Components/Pages/Todo.razor
@@ -1,13 +1,13 @@
 ﻿@page "/todo"
 @using MinimalApi.Domain.Todo.Models
-@rendermode InteractiveServer
+@inject ModalService ModalService
 
 <PageTitle>Todo</PageTitle>
 
-<h3>Todo (@todos.Count(todo => !todo.IsDone))</h3>
+<h3>Todo (@_todos.Count(todo => !todo.IsDone))</h3>
 
 <ul>
-    @foreach (var todo in todos)
+    @foreach (var todo in _todos)
     {
     <li>
         <input type="checkbox" @bind="todo.IsDone" />
@@ -16,20 +16,26 @@
     }
 </ul>
 
-<input placeholder="Something todo" @bind="newTodo" />
+<input placeholder="Something todo" @bind="_newTodo" />
 <button @onclick="AddTodo">Add todo</button>
 
 @code {
-    private List<TodoItem> todos = new();
-    
-    private string? newTodo;
+private readonly List<TodoItem> _todos = [];
 
-    private void AddTodo()
-    {
-        if (!string.IsNullOrWhiteSpace(newTodo))
-        {
-            todos.Add(new TodoItem { Title = newTodo });
-            newTodo = string.Empty;
-        }
-    }
+private string? _newTodo;
+
+private async Task AddTodo()
+{
+if (string.IsNullOrWhiteSpace(_newTodo)) return;
+
+await ModalService.ErrorAsync(new ConfirmOptions
+{
+Title = "Add Todo",
+Content = _newTodo,
+Style = "width: 80%; max-width: 800px;"
+});
+
+_todos.Add(new TodoItem { Title = _newTodo });
+_newTodo = string.Empty;
+}
 }
